examples/test/testpolicy11461.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11461
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key3: value28
      key22: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value14
          key38: value28
          key41: value0
      podSelector:
        matchLabels:
          key28: value42
